name:                pie
version:             0.1.0.0
synopsis:            Pie interpreter
-- description:
license:             BSD3
license-file:        LICENSE
author:              John Children
maintainer:          john.a.children@gmail.com
-- copyright:
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.Pie.Symbols
                     , Language.Pie.Expr
                     , Language.Pie.Environment
                     , Language.Pie.Values
                     , Language.Pie.Parse
                     , Language.Pie.Print
                     , Language.Pie.Eval
                     , Language.Pie.Judgement
                     , Language.Pie.TypeChecker
                     , Language.Pie.Interpreter
  build-depends:       base                   >= 4.9  && < 4.13
                     , containers             >= 0.6  && < 0.7
                     , text                   >= 1.2  && < 1.3
                     , transformers           >= 0.5  && < 0.6
                     , megaparsec             >= 7.0  && < 8.0
                     , prettyprinter          >= 1.2  && < 1.3
                     , recursion-schemes      >= 5.1  && < 5.2
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wincomplete-patterns


executable pie-repl
  main-is:             Main.hs
  build-depends:       base                   >= 4.9  && < 4.13
                     , text                   >= 1.2  && < 1.3
                     , transformers           >= 0.5  && < 0.6
                     , repline                >= 0.2  && < 0.3
                     , haskeline              >= 0.7  && < 0.8
                     , pie
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wincomplete-patterns


test-suite pie-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Driver.hs
  build-depends:       base                   >= 4.9  && < 4.13
                     , text                   >= 1.2  && < 1.3
                     , hedgehog               >= 0.6  && < 0.7
                     , tasty                  >= 1.2  && < 1.3
                     , tasty-hedgehog         >= 0.2  && < 0.3
                     , tasty-hspec            >= 1.1  && < 1.2
                     , tasty-discover         >= 4.2  && < 5.0
                     , pie
  other-modules:       Test
                       ParsePrintTest
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wincomplete-patterns
